--- a/projetofinal/src/main/resources/application.properties
+++ b/projetofinal/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 
+# 1 - string de conexão com o BD
+spring.datasource.url= jdbc:mysql://localhost:3306/projetofinal?createDatabaseIfNotExist=true
+
+# 2 - usuário do BD
+spring.datasource.username = professor
+
+# 3 - senha do BD
+spring.datasource.password = aula
+
+# 4 - dialeto
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+# parametros opcionais
+
+# exibir as mensagens de SQL
+spring.jpa.show-sql = true
+
+# delegar para o JPA a criação das tabelas
+spring.jpa.hibernate.ddl-auto = update
